fixed spacing

--- a/css/flexbox-fundamentals-exercise.css
+++ b/css/flexbox-fundamentals-exercise.css
@@ -36,7 +36,7 @@ h2, h3 {
     /* enter needed declarations here */
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
 
 }
 
